<resources>
    <string name="app_name">Indie News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new">New</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>

    <string name="home_second">Home Second</string>
</resources>
