<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/nav_subscriptions"
            android:title="@string/menu_subscriptions" />
        <item
            android:id="@+id/nav_popular"
            android:title="@string/menu_popular" />
        <item
            android:id="@+id/nav_saved"
            android:title="@string/menu_saved" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />
    </group>
</menu>
