<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_new">

    <fragment
        android:id="@+id/nav_new"
        android:name="com.example.indienews.ui.new.NewFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.indienews.ui.new.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_new" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_subscriptions"
        android:name="com.example.indienews.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/menu_subscriptions"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.indienews.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_slideshow" />
</navigation>